   to a service
 - Breaking change: endpoints for services are calculated immediately when you invoke ->service.
   before they were calculated when the first method call to the service was made, so you got
   "no region" exceptions on the first call. Now the exceptions are thrown immediately.
 - Bug fixed: Throw exceptions on methods that don't return anything
 - New API: MarketplaceEntitlement
 - New API: Athena
 - API update: AppStream
 - API update: CloudDirectory
 - API update: CloudFormation
 - API update: CloudWatchEvents
 - API update: CodeDeploy
 - API update: CongnitoIdp
 - API update: DeviceFarm
 - API update: DMS
 - API update: ECS
 - API update: ELB
 - API update: ELBv2
 - API update: GameLift
 - API update: Inspector
 - API update: IoT
 - API update: KinesisAnalytics
 - API update: Lambda
 - API update: LexModels
 - API update: Lightsail
 - API update: Organizations
 - API update: Rekognition
 - API update: ResourceTagging
 - API update: RDS
 - API update: Snowball
 - API update: SQS
 - API update: SSM
 - API update: StorageGateway
 - API update: WorkDocs

0.32 20 Apr 2017
 - Speed up Credential Refreshing (Arthur Axel fREW Schmidt)
 - Bug fixed: Issue #105. Some API calls where not correctly handling parameters specified in their URI.
   Notably, this fixes S3 ListObjectsV2. (dakkar)
 - Bug fixed: RestJSON services support parameters and results in body (streaming responses)
 - S3 now supports Metadata correctly (PopeFelix)
 - New API: LexRuntime
 - New API: Organizations
 - New API: MTurk (Mechanical Turk)
 - New API: WorkDocs
 - New API: ResourceTagging
 - New API: CodeStar
 - New API: LexModels
 - CodeCommit API update
 - ELBv2 API update
 - ECS API update 
 - EC2 API update
 - StorageGateway API update
 - DirectConnect API update
 - CognitoIdentity API update
 - Config API update
 - KMS API update
 - GameLift API update
 - ElasticBeanstalk API update
 - ES API update
 - DynamoDB API update
 - IAM API update
 - RDS API update